--- a/lab05-communicate-via-docker-compose/docker-compose.yml
+++ b/lab05-communicate-via-docker-compose/docker-compose.yml
@@ -20,5 +20,5 @@ services:
       dockerfile: Dockerfile
     environment:
       PORT: 8000
-    ports:
-      - '8000:8000'
+    # ports:
+    #   - '8000:8000'
