--- a/lab07-docker-compose-images/docker-compose.yml
+++ b/lab07-docker-compose-images/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       - DBCONNECTION=?:?@(?:?)/?
 
   store-database:
-    image: mysql:5.7
+    image: mysql:8.0.22
     container_name: store-database
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=sealteam
-      - MYSQL_PASSWORD=sckshuhari
+      - MYSQL_ROOT_PASSWORD=?
+      - MYSQL_USER=?
+      - MYSQL_PASSWORD=?
       - MYSQL_DATABASE=toy
     volumes:
       - ?:?
@@ -33,7 +33,7 @@ services:
     container_name: store-nginx
     restart: always
     volumes:
-        - ./out:/etc/nginx/html:ro
+        - ./html:/etc/nginx/html:ro
         - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - store-service
@@ -41,15 +41,12 @@ services:
       - "80:80"
 
   bank-gateway:
-    image: sckseal/toy-store-bankgateway:0.0.1
+    image: ?
     container_name: bank-gateway
     restart: always
-    ports:
-      - "8882:8882"
-
+    
   shipping-gateway:
-    image: sckseal/toy-store-shippinggateway:0.0.1
+    image: ?
     container_name: shipping-gateway
     restart: always
-    ports:
-      - "8883:8882"
+    
